Fix display overflowing

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     font-weight: normal;
     font-style: normal;
     width: 400px;
-    height: 600px;
+    min-height: 600px;
     background-color: #01A7C2;
     font-size: 1.5rem;
     padding: 10px;
@@ -43,11 +43,13 @@
 }
 
 .display{
-    height: 80px;
-    font-size: 30px;
-    padding-right: 20px;
+    min-height: 80px;
+    font-size: 40px;
+    padding: 20px;
 
+    overflow-wrap: anywhere;
     justify-content: end;
+    align-items: end;
     flex: 1 1 400px;
 }
 
